Use brand logo image for header and favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Book accommodations, tours, and transport." />
     <meta name="author" content="Merry 360 X" />
 
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/brand/logo.png" />
+    <link rel="apple-touch-icon" href="/brand/logo.png" />
+
     <meta property="og:title" content="Merry Moments" />
     <meta property="og:description" content="Book accommodations, tours, and transport." />
     <meta property="og:type" content="website" />
