--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merry Moments</title>
+    <title>Merry Moments, accommodations, tours, and transport.</title>
     <meta name="description" content="Book accommodations, tours, and transport." />
     <meta name="author" content="Merry 360 X" />
 
     <link rel="icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" href="/brand/logo.png" />
     <link rel="apple-touch-icon" href="/brand/logo.png" />
-
+  
     <meta property="og:title" content="Merry Moments" />
     <meta property="og:description" content="Book accommodations, tours, and transport." />
     <meta property="og:type" content="website" />
