Branding: descriptive tab title + app name

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merry Moments</title>
+    <title>Merry Moments — Stays, Tours & Transport</title>
     <meta name="description" content="Book accommodations, tours, and transport." />
     <meta name="author" content="Merry 360 X" />
+    <meta name="application-name" content="Merry Moments — Stays, Tours & Transport" />
+    <meta name="apple-mobile-web-app-title" content="Merry Moments" />
 
     <link rel="icon" href="/brand/logo.png" />
     <link rel="icon" type="image/png" href="/brand/logo.png" />
     <link rel="shortcut icon" href="/brand/logo.png" />
     <link rel="apple-touch-icon" href="/brand/logo.png" />
   
-    <meta property="og:title" content="Merry Moments" />
+    <meta property="og:title" content="Merry Moments — Stays, Tours & Transport" />
     <meta property="og:description" content="Book accommodations, tours, and transport." />
     <meta property="og:type" content="website" />
     <!-- Optional: add a real Open Graph image in /public and update og:image -->
