--- a/email-templates/confirm-email.html
+++ b/email-templates/confirm-email.html
@@ -14,27 +14,7 @@
                     <!-- Logo Header -->
                     <tr>
                         <td style="padding: 48px 40px 32px; text-align: center;">
-                            <svg viewBox="0 0 40 40" width="48" height="48" style="display: inline-block;">
-                                <circle cx="20" cy="20" r="3" fill="#E64980" />
-                                <circle cx="20" cy="13" r="2" fill="#36383D" />
-                                <circle cx="26.06" cy="16" r="2" fill="#36383D" />
-                                <circle cx="26.06" cy="24" r="2" fill="#36383D" />
-                                <circle cx="20" cy="27" r="2" fill="#36383D" />
-                                <circle cx="13.94" cy="24" r="2" fill="#36383D" />
-                                <circle cx="13.94" cy="16" r="2" fill="#36383D" />
-                                <circle cx="20" cy="6" r="2" fill="#36383D" />
-                                <circle cx="25.66" cy="8.5" r="2" fill="#36383D" />
-                                <circle cx="31.32" cy="14.66" r="2" fill="#36383D" />
-                                <circle cx="34" cy="20" r="2" fill="#36383D" />
-                                <circle cx="31.32" cy="25.34" r="2" fill="#36383D" />
-                                <circle cx="25.66" cy="31.5" r="2" fill="#36383D" />
-                                <circle cx="20" cy="34" r="2" fill="#36383D" />
-                                <circle cx="14.34" cy="31.5" r="2" fill="#36383D" />
-                                <circle cx="8.68" cy="25.34" r="2" fill="#36383D" />
-                                <circle cx="6" cy="20" r="2" fill="#36383D" />
-                                <circle cx="8.68" cy="14.66" r="2" fill="#36383D" />
-                                <circle cx="14.34" cy="8.5" r="2" fill="#36383D" />
-                            </svg>
+                            <img src="https://merry360x.com/brand/logo.png" alt="Merry Moments" width="64" height="64" style="display: inline-block; max-width: 64px; height: auto;" />
                         </td>
                     </tr>
 
