--- a/email-templates/reset-password-email.html
+++ b/email-templates/reset-password-email.html
@@ -5,56 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Your Password</title>
 </head>
-<body style="margin: 0; padding: 0; font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background-color: #fafafa;">
-    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #fafafa;">
+<body style="margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif; background-color: #f8fafc; -webkit-font-smoothing: antialiased;">
+    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #f8fafc;">
         <tr>
-            <td style="padding: 60px 20px;">
-                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="max-width: 540px; margin: 0 auto; background-color: #ffffff; border-radius: 12px; overflow: hidden;">
+            <td style="padding: 40px 20px;">
+                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="max-width: 520px; margin: 0 auto; background-color: #ffffff; border-radius: 16px; overflow: hidden; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);">
                     
                     <!-- Logo Header -->
                     <tr>
-                        <td style="padding: 48px 40px 32px; text-align: center;">
-                            <img src="https://merry360x.com/brand/logo.png" alt="Merry Moments" width="64" height="64" style="display: inline-block; max-width: 64px; height: auto;" />
+                        <td style="padding: 40px 40px 24px; text-align: center;">
+                            <img src="https://merry360x.com/brand/logo.png" alt="Merry Moments" width="56" height="56" style="display: inline-block; max-width: 56px; height: auto; border-radius: 12px;" />
+                        </td>
+                    </tr>
+
+                    <!-- Title with Icon -->
+                    <tr>
+                        <td style="padding: 0 40px 24px; text-align: center;">
+                            <div style="width: 56px; height: 56px; margin: 0 auto 16px; background-color: #fef3c7; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
+                                <span style="font-size: 28px; line-height: 56px;">🔐</span>
+                            </div>
+                            <h1 style="margin: 0 0 8px; color: #1f2937; font-size: 24px; font-weight: 600;">
+                                Reset Your Password
+                            </h1>
+                            <p style="margin: 0; color: #6b7280; font-size: 15px;">
+                                We received a request to reset your password
+                            </p>
+                        </td>
+                    </tr>
+
+                    <!-- Divider -->
+                    <tr>
+                        <td style="padding: 0 40px;">
+                            <div style="border-top: 1px solid #e5e7eb;"></div>
                         </td>
                     </tr>
 
                     <!-- Content -->
                     <tr>
-                        <td style="padding: 0 40px 48px;">
-                            <h1 style="margin: 0 0 16px; color: #36383D; font-size: 24px; font-weight: 600; text-align: center;">
-                                Reset your password
-                            </h1>
-                            
-                            <p style="margin: 0 0 32px; color: #6B7280; font-size: 15px; line-height: 1.6; text-align: center;">
-                                Click the button below to reset your password. This link expires in 1 hour.
+                        <td style="padding: 32px 40px;">
+                            <p style="margin: 0 0 24px; color: #4b5563; font-size: 15px; line-height: 1.6; text-align: center;">
+                                Click the button below to create a new password. For security reasons, this link will expire in 1 hour.
                             </p>
 
                             <!-- Button -->
                             <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                                 <tr>
-                                    <td style="text-align: center; padding-bottom: 32px;">
-                                        <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 14px 32px; background-color: #E64980; color: #ffffff; text-decoration: none; border-radius: 8px; font-weight: 500; font-size: 15px;">
+                                    <td style="text-align: center;">
+                                        <a href="{{ .ConfirmationURL }}" style="display: inline-block; padding: 14px 40px; background-color: #E64980; color: #ffffff; text-decoration: none; border-radius: 8px; font-weight: 500; font-size: 15px;">
                                             Reset Password
                                         </a>
                                     </td>
                                 </tr>
                             </table>
+                        </td>
+                    </tr>
 
-                            <!-- Divider -->
-                            <div style="border-top: 1px solid #F3F4F6; margin: 0 0 24px;"></div>
-
-                            <!-- Security Note -->
-                            <p style="margin: 0; color: #9CA3AF; font-size: 13px; line-height: 1.6; text-align: center;">
-                                Didn't request this? You can safely ignore this email.
-                            </p>
+                    <!-- Security Note -->
+                    <tr>
+                        <td style="padding: 0 40px 32px;">
+                            <div style="background-color: #fef2f2; border-radius: 10px; padding: 16px; text-align: center;">
+                                <p style="margin: 0; color: #991b1b; font-size: 13px; line-height: 1.5;">
+                                    ⚠️ If you didn't request this, please ignore this email.<br>
+                                    Your password will remain unchanged.
+                                </p>
+                            </div>
                         </td>
                     </tr>
 
                     <!-- Footer -->
                     <tr>
-                        <td style="padding: 24px 40px; background-color: #FAFAFA; text-align: center;">
-                            <p style="margin: 0; color: #9CA3AF; font-size: 12px;">
-                                © 2026 Merry Moments
+                        <td style="padding: 24px 40px; background-color: #fafafa; text-align: center;">
+                            <p style="margin: 0 0 8px; color: #9ca3af; font-size: 12px;">
+                                Merry Moments · Book local. Travel better.
+                            </p>
+                            <p style="margin: 0; color: #9ca3af; font-size: 11px;">
+                                <a href="https://merry360x.com" style="color: #9ca3af; text-decoration: none;">merry360x.com</a>
                             </p>
                         </td>
                     </tr>
