Finalize UI, payout/refund, SEO, and branding updates

--- a/index.html
+++ b/index.html
@@ -6,20 +6,75 @@
     <title>Merry Moments — Stays, Tours & Transport</title>
     <meta name="description" content="Book accommodations, tours, and transport." />
     <meta name="author" content="Merry 360 X" />
+    <meta name="contact" content="support@merry360x.com" />
+    <meta name="reply-to" content="support@merry360x.com" />
     <meta name="application-name" content="Merry Moments — Stays, Tours & Transport" />
     <meta name="apple-mobile-web-app-title" content="Merry Moments" />
+    <link rel="canonical" href="https://merry360x.com/" />
 
-    <link rel="icon" href="/brand/logo.png" />
-    <link rel="icon" type="image/png" href="/brand/logo.png" />
-    <link rel="shortcut icon" href="/brand/logo.png" />
-    <link rel="apple-touch-icon" href="/brand/logo.png" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   
     <meta property="og:title" content="Merry Moments — Stays, Tours & Transport" />
     <meta property="og:description" content="Book accommodations, tours, and transport." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://merry360x.com/" />
+    <meta property="og:site_name" content="Merry360X" />
+    <meta property="og:email" content="support@merry360x.com" />
     <!-- Optional: add a real Open Graph image in /public and update og:image -->
 
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Merry Moments — Stays, Tours & Transport" />
+    <meta name="twitter:description" content="Book accommodations, tours, and transport." />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Merry360X",
+        "url": "https://merry360x.com",
+        "logo": "https://merry360x.com/brand/logo.png",
+        "email": "support@merry360x.com",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "customer support",
+          "email": "support@merry360x.com"
+        }
+      }
+    </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Merry360X",
+        "url": "https://merry360x.com",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://merry360x.com/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ItemList",
+        "name": "Primary site links",
+        "itemListElement": [
+          { "@type": "SiteNavigationElement", "position": 1, "name": "Accommodations", "url": "https://merry360x.com/accommodations" },
+          { "@type": "SiteNavigationElement", "position": 2, "name": "Tours", "url": "https://merry360x.com/tours" },
+          { "@type": "SiteNavigationElement", "position": 3, "name": "Tour Packages", "url": "https://merry360x.com/tours" },
+          { "@type": "SiteNavigationElement", "position": 4, "name": "Transport", "url": "https://merry360x.com/transport" },
+          { "@type": "SiteNavigationElement", "position": 5, "name": "Stories", "url": "https://merry360x.com/stories" }
+        ]
+      }
+    </script>
     <!-- Optional: add a real Open Graph image in /public and update twitter:image -->
   </head>
 
