Rebrand: replace 'Merry Moments' with 'Merry 360 Experiences' sitewide

--- a/email-templates/confirm-email.html
+++ b/email-templates/confirm-email.html
@@ -10,12 +10,12 @@
     <tr>
       <td align="center">
         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="max-width:560px;background:#fff;border:1px solid #e5e7eb;border-radius:12px;overflow:hidden;">
-          <tr><td style="padding:28px 28px 12px;text-align:center;"><img src="https://merry360x.com/brand/logo.png" alt="Merry Moments" width="44" height="44" style="border-radius:10px;" /></td></tr>
+          <tr><td style="padding:28px 28px 12px;text-align:center;"><img src="https://merry360x.com/brand/logo.png" alt="Merry 360 Experiences" width="44" height="44" style="border-radius:10px;" /></td></tr>
           <tr>
             <td style="padding:0 28px 10px;text-align:center;">
               <p style="margin:0 0 8px;color:#6b7280;font-size:11px;letter-spacing:.08em;text-transform:uppercase;">Account Security</p>
               <h1 style="margin:0;color:#111827;font-size:24px;">Confirm your email</h1>
-              <p style="margin:10px 0 0;color:#4b5563;font-size:14px;line-height:1.6;">Welcome to Merry Moments. Confirm your email to activate your account.</p>
+              <p style="margin:10px 0 0;color:#4b5563;font-size:14px;line-height:1.6;">Welcome to Merry 360 Experiences. Confirm your email to activate your account.</p>
             </td>
           </tr>
           <tr><td style="padding:16px 28px 0;"><div style="height:1px;background:#e5e7eb;"></div></td></tr>
@@ -27,7 +27,7 @@
           </tr>
           <tr>
             <td style="background:#f9fafb;padding:16px 28px;text-align:center;border-top:1px solid #e5e7eb;">
-              <p style="margin:0;color:#6b7280;font-size:12px;">Merry Moments · Book local. Travel better.</p>
+              <p style="margin:0;color:#6b7280;font-size:12px;">Merry 360 Experiences · Book local. Travel better.</p>
               <p style="margin:6px 0 0;font-size:11px;"><a href="https://merry360x.com" style="color:#6b7280;text-decoration:none;">merry360x.com</a> · <a href="mailto:support@merry360x.com" style="color:#6b7280;text-decoration:none;">support@merry360x.com</a></p>
             </td>
           </tr>
