--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merry Moments — Stays, Tours & Transport</title>
+    <title>Merry 360 Experiences — Stays, Tours & Transport</title>
     <meta name="description" content="Book accommodations, tours, and transport." />
     <meta name="author" content="Merry 360 X" />
     <meta name="contact" content="support@merry360x.com" />
     <meta name="reply-to" content="support@merry360x.com" />
-    <meta name="application-name" content="Merry Moments — Stays, Tours & Transport" />
-    <meta name="apple-mobile-web-app-title" content="Merry Moments" />
+    <meta name="application-name" content="Merry 360 Experiences — Stays, Tours & Transport" />
+    <meta name="apple-mobile-web-app-title" content="Merry 360 Experiences" />
     <link rel="canonical" href="https://merry360x.com/" />
 
     <link rel="icon" href="/favicon.ico" sizes="any" />
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
   
-    <meta property="og:title" content="Merry Moments — Stays, Tours & Transport" />
+    <meta property="og:title" content="Merry 360 Experiences — Stays, Tours & Transport" />
     <meta property="og:description" content="Book accommodations, tours, and transport." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://merry360x.com/" />
@@ -29,7 +29,7 @@
     <!-- Optional: add a real Open Graph image in /public and update og:image -->
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Merry Moments — Stays, Tours & Transport" />
+    <meta name="twitter:title" content="Merry 360 Experiences — Stays, Tours & Transport" />
     <meta name="twitter:description" content="Book accommodations, tours, and transport." />
 
     <script type="application/ld+json">
